--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
+greenlet==3.0.1
 idna==3.4
+psycopg2-binary==2.9.9
 requests==2.31.0
 soupsieve==2.5
+SQLAlchemy==2.0.23
+typing_extensions==4.8.0
 urllib3==2.1.0
